--- a/src/app/components/evento-editar/evento-editar.component.html
+++ b/src/app/components/evento-editar/evento-editar.component.html
@@ -28,7 +28,7 @@
                     </owl-carousel-o>
                     <hr>
                     <div class="container-fluid text-left">
-                        <h4>Descrpición.</h4>
+                        <h4>Descripción.</h4>
                         <p> {{evento.descripcion_evento}} </p>
                     </div>
                     <hr>
@@ -39,8 +39,8 @@
                 </div>
                 <div class="card-footer">
                     <p class="card-text">
-                        <small class="text-muted"> Inicio: {{ evento.dia_inicio_evento | date:'fullDate' }} </small><br>
-                        <small class="text-muted"> Cierre: {{ evento.dia_conclusion_evento | date:'fullDate' }} </small>
+                        <small class="text-muted"> Inicio: {{ evento.dia_inicio_evento | date:'fullDate' }} a las {{evento.hora_inicio_evento}} </small><br>
+                        <small class="text-muted"> Cierre: {{ evento.dia_conclusion_evento | date:'fullDate' }} a las {{evento.hora_conclusion_evento}}</small>
                     </p>
                 </div>
             </div>
@@ -52,7 +52,8 @@
                             <h4> {{boleto.nom_bol}} </h4>
                         </div>
                         <div class="col-md-6">
-                            <button class="btn btn-success float-right" (click)="editarBoleto( boleto.id_boleto )">Editar</button>
+                            <button class="btn btn-danger  float-right m-1" type="button" (click)="eliminarBoleto( boleto.id_boleto )">Eliminar</button>
+                            <button class="btn btn-success float-right m-1" (click)="editarBoleto( boleto.id_boleto )">Editar</button>
                         </div>
                     </div>
                 </div>
