--- a/src/app/components/publicacion-editar/publicacion-editar.component.html
+++ b/src/app/components/publicacion-editar/publicacion-editar.component.html
@@ -20,7 +20,8 @@
                         <p>{{ publicacion.articulo_pub }}</p>
                     </div>
                     <hr>
-                    <div class="container-fluid">
+                    <div class="container-fluid text-center">
+                        <h4>Imágenes Generales.</h4>
                         <owl-carousel-o [options]="customOptions">
                             <ng-template carouselSlide *ngFor="let img of imgs">
                                 <div class="slide">
@@ -61,8 +62,8 @@
                                         <input type="text" class="form-control" id="nombreEvento" placeholder="Ingrese el Título" formControlName="titulo">
                                     </div>
                                     <div class="col-md-6">
-                                        <label for="cuerpo">Cuerpo:</label>
-                                        <textarea id="cuerpo" class="form-control" rows="5" formControlName="cuerpo"></textarea>
+                                        <label for="cuerpo">Articulo:</label>
+                                        <textarea id="cuerpo" class="form-control" rows="5" formControlName="articulo"></textarea>
                                     </div>
                                 </div>
 
@@ -90,7 +91,7 @@
                                 <div class="input-group form-row mb-3">
                                     <div class="col-md-6 text-center">
                                         <label for="imgPrincipal">Imagen Principal:</label><br>
-                                        <input type="file" id="imgPrincipal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal"> <br>
+                                        <input #imgInputP type="file" id="imgPrincipal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal"> <br>
                                         <small *ngIf="validacionTamImg" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
                                         <div class="row" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
                                             <div class="col-md-9">
@@ -106,19 +107,26 @@
 
                                     <div class="col-md-6 text-center">
                                         <label for="imgsPublicacion ">Imagenes Generales:</label><br>
-                                        <input type='file' id="imgsPublicacion " accept=".jpg " (change)="multiImg($event) " multiple formControlName="imgsPublicacion"> <br>
+                                        <input #imgsInput type='file' id="imgsPublicacion " accept=".jpg " (change)="multiImg($event) " multiple formControlName="imgsPublicacion"> <br>
                                         <small *ngIf="validacionTamImgs" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
                                         <div class="row" *ngFor='let url of urls; let i = index'>
-                                            <ng-container *ngIf="(urls != null) && (!validacionTamImgs)">
-                                                <div class="col-md-9">
-                                                    <img [src]="url " height="200 " class="d-block mx-auto float-right"><br>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(i)">
+                                            <div class="col-md-9">
+                                                <img [src]="url " height="200 " class="d-block mx-auto float-right"><br>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(url, i)">
                                                       <span aria-hidden="true">&times;</span>
                                                     </button>
-                                                </div>
-                                            </ng-container>
+                                            </div>
+                                        </div>
+                                        <div class="mt-4 text-center">
+                                            <h5>Imágenes Actuales.</h5>
+                                        </div>
+                                        <div class="row mt-3 border" *ngFor='let img of imgs'>
+                                            <div class="col-md-12 text-center">
+                                                <img [src]="'assets/img/publicaciones/'+img.ruta_imagen_pub " height="300" width="400"><br>
+                                                <button type="button" class="btn btn-danger" (click)="eliminarImg( img.id_imagen_pub )">Eliminar</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
