--- a/src/app/components/publicaciones/publicaciones.component.html
+++ b/src/app/components/publicaciones/publicaciones.component.html
@@ -97,27 +97,25 @@
                         <div class="col-md-12">
                             <label for="imgsPublicacion">Imagenes de la Publicación: <small class="text-danger">*</small></label>
                             <input #imgsInput [writeFile]="true" type='file' id="imgsPublicacion" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsPublicacion">
-                            <small *ngIf="validacionImgs" class="form-text text-danger">>Mínimo una imágen.</small>
+                            <small *ngIf="validacionImgs" class="form-text text-danger">Mínimo una imágen.</small>
                             <small *ngIf="validacionTamImgs" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
-                            <ng-container *ngIf="(urls != null) && (!validacionTamImgs)">
-                                <div class="row" *ngFor='let url of urls; let i = index'>
-                                    <div class="col-md-9">
-                                        <img [src]="url " height="200 " class="float-right"><br>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(i)">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                                    </div>
+                            <div class="row" *ngFor='let url of urls; let i = index'>
+                                <div class="col-md-9">
+                                    <img [src]="url " height="200 " class="float-right"><br>
                                 </div>
-                            </ng-container>
+                                <div class="col-md-3">
+                                    <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(url, i)">
+                                          <span aria-hidden="true">&times;</span>
+                                        </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <hr>
 
                     <div class="input-group form-row mb-3">
                         <div class="col-md-12 text-center">
-                            <button class="btn btn-success" type="submit">Crear</button>
+                            <button [disabled]="formPublicaciones.invalid" class="btn btn-success" type="submit">Crear</button>
                         </div>
                     </div>
                 </form>
