--- a/src/app/components/repartidores/repartidores.component.html
+++ b/src/app/components/repartidores/repartidores.component.html
@@ -17,58 +17,32 @@
         </div>
     </div>
     <div class="row mt-2">
-        <!-- <div class="col-md-12">
+        <div class="col-md-12">
 
             <table class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark text-center">
                     <tr>
                         <th scope="col" style="width: 5%;">ID</th>
-                        <th scope="col" style="width: 15%;">Nombre(s)</th>
-                        <th scope="col" style="width: 15%;">Apelllido(s)</th>
+                        <th scope="col" style="width: 30%;">Nombre</th>
                         <th scope="col" style="width: 20%;">Correo</th>
-                        <th scope="col" style="width: 10%;">Acciones</th>
+                        <th scope="col" style="width: 10%;">Teléfono</th>
+                        <th scope="col" style="width: 20%;">Acciones</th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
-                    <tr>
-                        <th scope="row" class="align-middle">1</th>
-                        <td class="align-middle">Nombre 1</td>
-                        <td class="align-middle">Apellido 1</td>
-                        <td class="align-middle">correo@ejemplo.com</td>
+                    <tr *ngFor="let repartidor of repartidores">
+                        <th scope="row" class="align-middle"> {{repartidor.id_usuario}} </th>
+                        <td class="align-middle"> {{repartidor.nombre}} </td>
+                        <td class="align-middle"> {{repartidor.correo}} </td>
+                        <td class="align-middle"> {{repartidor.celular}} </td>
                         <td class="align-middle">
-                            <button class="btn btn-danger" type="button">Eliminar</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="align-middle">2</th>
-                        <td class="align-middle">Nombre 2</td>
-                        <td class="align-middle">Apellido 2</td>
-                        <td class="align-middle">correo@ejemplo.com</td>
-                        <td class="align-middle">
-                            <button class="btn btn-danger" type="button">Eliminar</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="align-middle">3</th>
-                        <td class="align-middle">Nombre 3</td>
-                        <td class="align-middle">Apellido 3</td>
-                        <td class="align-middle">correo@ejemplo.com</td>
-                        <td class="align-middle">
-                            <button class="btn btn-danger" type="button">Eliminar</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="align-middle">4</th>
-                        <td class="align-middle">Nombre 4</td>
-                        <td class="align-middle">Apellido 4</td>
-                        <td class="align-middle">correo@ejemplo.com</td>
-                        <td class="align-middle">
-                            <button class="btn btn-danger" type="button">Eliminar</button>
+                            <button class="btn btn-primary" type="button" (click)="editarReapartidor( repartidor.id_usuario )">Editar</button>
+                            <button class="btn btn-danger ml-lg-2" type="button" (click)="eliminarRepartidor( repartidor.id_usuario )">Eliminar</button>
                         </td>
                     </tr>
                 </tbody>
             </table>
-        </div> -->
+        </div>
         <br>
         <div class="col-md-12">
             <button type="button" class="btn btn-outline-success btn-block" data-toggle="modal" data-target="#modalEvento">
@@ -82,7 +56,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalEventoLabel">Registrar Repartidor</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button #cerrar type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
             </div>
@@ -122,18 +96,36 @@
                     </div>
 
                     <div class="form-row mb-3">
-                        <div class="col-md-12">
-                            <label for="contra">Contraseña: <small class="text-danger">*</small></label>
-                            <input type="password" class="form-control" id="contra" placeholder="Ingrese la Contraseña del Repartidor/a" formControlName="contra" [class.is-invalid]="validacionContra">
-                            <small *ngIf="validacionContra" class="form-text text-danger">Contraseña Obligatoria.</small>
+                        <div class="col-md-6">
+                            <label for="nacimiento">Fecha de Nacimiento: <small class="text-danger">*</small></label>
+                            <input type="date" class="form-control" id="nacimiento" placeholder="Ingrese la fecha de nacimiento del repartidor/a" formControlName="fechaNacimiento" [class.is-invalid]="validacionNacimiento">
+                            <small *ngIf="validacionNacimiento" class="form-text text-danger">Fecha de Nacimiento Obligatoria.</small>
+                        </div>
+                    </div>
+
+                    <div class="form-row mb-3">
+                        <div class="col-md-6">
+                            <label for="tel">Teléfono: <small class="text-danger">*</small></label>
+                            <input class="form-control" type="tel" id="tel" placeholder="888 888 8888" maxlength="10" formControlName="telefono" [class.is-invalid]="validacionTelefono || validacionNumero">
+                            <small *ngIf="validacionTelefono" class="form-text text-danger">Teléfono Obligatorio.</small>
+                            <small *ngIf="validacionNumero" class="form-text text-danger">Ingrese un teléfono válido.</small>
+                        </div>
+                    </div>
+
+                    <div class="form-row mb-3">
+                        <div class="col-md-6">
+                            <label for="telext">Teléfono Adicional: <small class="text-danger">*</small></label>
+                            <input class="form-control" type="tel" id="telext" placeholder="888 888 8888" maxlength="10" formControlName="telefonoExt" [class.is-invalid]="validacionTelefonoExtra || validacionNumeroExtra">
+                            <small *ngIf="validacionTelefonoExtra" class="form-text text-danger">Teléfono Adicional Obligatorio.</small>
+                            <small *ngIf="validacionNumeroExtra" class="form-text text-danger">Ingrese un teléfono válido.</small>
                         </div>
                     </div>
 
                     <div class="form-row mb-3">
                         <div class="col-md-12">
-                            <label for="doc">Documentos de Registro: <small class="text-danger">*</small></label>
-                            <input type="file" accept=".pdf" id="docS" formControlName="documentacion" formControlName="documento">
-                            <small *ngIf="validacionDoc" class="form-text text-danger">Documentación Obligatoria.</small>
+                            <label for="contra">Contraseña: <small class="text-danger">*</small></label>
+                            <input type="password" class="form-control" id="contra" placeholder="Ingrese la Contraseña del Repartidor/a" formControlName="contra" [class.is-invalid]="validacionContra">
+                            <small *ngIf="validacionContra" class="form-text text-danger">Contraseña Obligatoria.</small>
                         </div>
                     </div>
 
