--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -1,21 +1,51 @@
 <div class="container-fluid table-responsive animated fadeIn fast">
-    <div class="row ">
+    <div class="row">
         <div class="col-md-12 text-center">
             <h2>Busca Tus Eventos</h2>
         </div>
     </div>
     <div class="row mb-4">
-        <div class="col-md-12">
+        <div class="col-md-6 d-block mx-auto">
             <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control" type="search" placeholder="Buscar" #buscar (keyup.enter)="buscarEvento( buscar.value)">
                 <div class="input-group-append">
-                    <button class="btn btn-navbar" type="button">
-              <i class="fas fa-search"></i>
-            </button>
+                    <button class="btn btn-navbar" type="button" (click)="buscarEvento( buscar.value )">
+                      <i class="fas fa-search"></i>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row mb-4">
+        <div class="d-block mx-auto">
+            <h5 class="text-danger" *ngIf="encontrado == false">Sin Resultados de búsqueda para "{{buscar.value}}"</h5>
+        </div>
+        <div class="col-md-12 text-center" *ngIf="encontrado == true">
+            <h5>Resultados de Búsqueda:</h5>
+            <table class="table table-striped table-bordered table-hover">
+                <thead class="thead-dark text-center">
+                    <tr>
+                        <th scope="col" style="width: 5%;">ID</th>
+                        <th scope="col" style="width: 30%;">Nombre</th>
+                        <th scope="col" style="width: 10%;">Descripcion</th>
+                        <th scope="col" style="width: 10%;">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr *ngFor="let resultado of busqueda">
+                        <th scope="row" class="align-middle">{{ resultado.id_evento }}</th>
+                        <td class="align-middle">{{ resultado.nombre_evento }}</td>
+                        <td class="align-middle">{{ resultado.descripcion_evento }}</td>
+                        <td class="align-middle">
+                            <button class="btn btn-primary" type="button" (click)="editarEvento( resultado.id_evento )">Editar</button>
+                            <button class="btn btn-danger ml-lg-2" type="button" (click)="eliminarEvento( resultado.id_evento )">Eliminar</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
