--- a/src/app/components/publicaciones/publicaciones.component.html
+++ b/src/app/components/publicaciones/publicaciones.component.html
@@ -5,17 +5,48 @@
         </div>
     </div>
     <div class="row mb-4">
-        <div class="col-md-12">
+        <div class="col-md-6 d-block mx-auto">
             <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control" type="search" placeholder="Buscar" #buscar (keyup.enter)="buscarPub( buscar.value)">
                 <div class="input-group-append">
-                    <button class="btn btn-navbar" type="button">
-          <i class="fas fa-search"></i>
-        </button>
+                    <button class="btn btn-navbar" type="button" (click)="buscarPub( buscar.value )">
+                    <i class="fas fa-search"></i>
+                  </button>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="row mb-4">
+        <div class="d-block mx-auto">
+            <h5 class="text-danger" *ngIf="encontrado == false">Sin Resultados de búsqueda para "{{buscar.value}}"</h5>
+        </div>
+        <div class="col-md-12 text-center" *ngIf="encontrado == true">
+            <h5>Resultados de Búsqueda:</h5>
+            <table class="table table-striped table-bordered table-hover">
+                <thead class="thead-dark text-center">
+                    <tr>
+                        <th scope="col" style="width: 5%;">ID</th>
+                        <th scope="col" style="width: 25%;">Título</th>
+                        <th scope="col" style="width: 45%;">Cuerpo de Publicación</th>
+                        <th scope="col" style="width: 20%;">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr *ngFor="let resultado of busqueda">
+                        <th scope="row" class="align-middle"> {{ resultado.id_publicacion }} </th>
+                        <td class="align-middle"> {{ resultado.titulo_pub }} </td>
+                        <td class="text-left align-middle"> {{ resultado.articulo_pub }} </td>
+                        <td class="align-middle">
+                            <button class="btn btn-primary" type="button" (click)="editarPublicacion( resultado.id_publicacion )">Editar</button>
+                            <button class="btn btn-danger  ml-2" type="button" (click)="eliminarPublicacion( resultado.id_publicacion )">Eliminar</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
