--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -5,20 +5,49 @@
         </div>
     </div>
     <div class="row mb-4">
-        <div class="col-md-12">
+        <div class="col-md-6 d-block mx-auto">
             <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control" type="search" placeholder="Buscar" #buscar (keyup.enter)="buscarUsuario( buscar.value)">
                 <div class="input-group-append">
-                    <button class="btn btn-navbar" type="button">
-                      <i class="fas fa-search"></i>
-                    </button>
+                    <button class="btn btn-navbar" type="button" (click)="buscarUsuario( buscar.value )">
+                <i class="fas fa-search"></i>
+              </button>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="row mb-4">
+        <div class="d-block mx-auto">
+            <h5 class="text-danger" *ngIf="encontrado == false">Sin Resultados de búsqueda para "{{buscar.value}}"</h5>
+        </div>
+        <div class="col-md-12 text-center" *ngIf="encontrado == true">
+            <h5>Resultados de Búsqueda:</h5>
+            <table class="table table-striped table-bordered table-hover">
+                <thead class="thead-dark text-center">
+                    <tr>
+                        <th scope="col" style="width: 5%;">ID</th>
+                        <th scope="col" style="width: 30%;">Nombre</th>
+                        <th scope="col" style="width: 20%;">Correo</th>
+                        <th scope="col" style="width: 10%;">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr *ngFor="let resultado of busqueda">
+                        <th scope="row" class="align-middle">{{ resultado.id_usuario }}</th>
+                        <td class="align-middle">{{ resultado.nombre }}</td>
+                        <td class="align-middle">{{ resultado.correo }}</td>
+                        <td class="align-middle">
+                            <button class="btn btn-danger" type="button">Eliminar</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
-
             <table class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark text-center">
                     <tr>
