--- a/src/app/components/evento-editar/evento-editar.component.html
+++ b/src/app/components/evento-editar/evento-editar.component.html
@@ -179,7 +179,7 @@
 
                                         <div class="mt-3">
                                             <label for="ordenImg">Orden de Evento: <small>(Posición de imagen principal en el carousel de eventos)</small></label>
-                                            <input type="number" class="form-control" id="ordenImg" min="0" step="1" formControlName="ordenImg">
+                                            <input type="number" class="form-control" id="ordenImg" min="0" step="1" formControlName="orden">
                                         </div>
                                     </div>
 
@@ -194,6 +194,7 @@
                                     </div>
                                 </div>
                             </form>
+                            <button #modalError type="button" class="invisible" data-toggle="modal" data-target="#modalError"></button>
                         </div>
                     </div>
                 </div>
@@ -358,6 +359,25 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="modalError" tabindex="-1" role="dialog" aria-labelledby="modalErrorLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button #cerrarModalError type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+            </div>
+            <div class="modal-body text-center">
+                <h5 class="text-danger"> {{errorOrden}} </h5>
+                <h6>Desea liberar el espacio?</h6>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary mx-auto" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary mx-auto" (click)="liberarLugar()">Liberar</button>
             </div>
         </div>
     </div>
