--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -18,24 +18,26 @@
     </div>
     <div class="row mb-4">
         <div class="d-block mx-auto">
-            <h5 class="text-danger" *ngIf="encontrado == false">Sin Resultados de búsqueda para "{{buscar.value}}"</h5>
+            <h5 class="text-danger" *ngIf="encontrado == false">Sin Resultados de búsqueda para"{{buscar.value}}"</h5>
         </div>
         <div class="col-md-12 text-center" *ngIf="encontrado == true">
             <h5>Resultados de Búsqueda:</h5>
             <table class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark text-center">
                     <tr>
-                        <th scope="col" style="width: 5%;">ID</th>
-                        <th scope="col" style="width: 30%;">Nombre</th>
-                        <th scope="col" style="width: 10%;">Descripcion</th>
-                        <th scope="col" style="width: 10%;">Acciones</th>
+                        <th scope="col" style="width: 10%;">ID</th>
+                        <th scope="col" style="width: 20%;">Nombre</th>
+                        <th scope="col" style="width: 30%;">Descripcion</th>
+                        <th scope="col" style="width: 20%;">Orden de anuncio</th>
+                        <th scope="col" style="width: 20%;">Acciones</th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
                     <tr *ngFor="let resultado of busqueda">
                         <th scope="row" class="align-middle">{{ resultado.id_evento }}</th>
                         <td class="align-middle">{{ resultado.nombre_evento }}</td>
-                        <td class="align-middle">{{ resultado.descripcion_evento }}</td>
+                        <td class="align-middle text-left">{{ resultado.descripcion_evento }}</td>
+                        <td class="align-middle">{{ resultado.orden_anuncio }}</td>
                         <td class="align-middle">
                             <button class="btn btn-primary" type="button" (click)="editarEvento( resultado.id_evento )">Editar</button>
                             <button class="btn btn-danger ml-lg-2" type="button" (click)="eliminarEvento( resultado.id_evento )">Eliminar</button>
@@ -49,17 +51,19 @@
     <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark text-center">
             <tr>
-                <th scope="col" style="width: 5%;">ID</th>
-                <th scope="col" style="width: 30%;">Nombre</th>
-                <th scope="col" style="width: 10%;">Descripcion</th>
-                <th scope="col" style="width: 10%;">Acciones</th>
+                <th scope="col" style="width: 10%;">ID</th>
+                <th scope="col" style="width: 20%;">Nombre</th>
+                <th scope="col" style="width: 30%;">Descripcion</th>
+                <th scope="col" style="width: 20%;">Orden de anuncio</th>
+                <th scope="col" style="width: 20%;">Acciones</th>
             </tr>
         </thead>
         <tbody class="text-center">
             <tr *ngFor="let evento of eventos">
                 <th scope="row" class="align-middle">{{ evento.id_evento }}</th>
                 <td class="align-middle">{{ evento.nombre_evento }}</td>
-                <td class="align-middle">{{ evento.descripcion_evento }}</td>
+                <td class="align-middle text-left">{{ evento.descripcion_evento }}</td>
+                <td class="align-middle">{{ evento.orden_anuncio }}</td>
                 <td class="align-middle">
                     <button class="btn btn-primary" type="button" (click)="editarEvento( evento.id_evento )">Editar</button>
                     <button class="btn btn-danger ml-lg-2" type="button" (click)="eliminarEvento( evento.id_evento )">Eliminar</button>
@@ -76,7 +80,7 @@
 
 </div>
 
-<div class="modal fade" id="modalEvento" tabindex="-1" role="dialog" aria-labelledby="modalEventoLabel">
+<div class="modal fade" id="modalEvento" tabindex="-1" role="dialog" aria-labelledby="modalEventoLabel" style="overflow-y: visible;">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -205,7 +209,7 @@
                             <small *ngIf="validacionTamImgs && formEventos.invalid" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
                             <div class="row" *ngFor='let url of urls; let i = index'>
                                 <div class="col-md-9">
-                                    <img [src]="url " height="200 " class="float-right"><br>
+                                    <img [src]="url" height="200" class="float-right"><br>
                                 </div>
                                 <div class="col-md-3">
                                     <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(url, i)">
@@ -221,31 +225,31 @@
                         <div class="col-md-12 text-center">
                             <button [disabled]="formEventos.invalid" class="btn btn-success" type="submit">Crear</button>
                         </div>
+                        <button #modalError type="button" class="invisible" data-toggle="modal" data-target="#modalError"></button>
                         <small class="text-danger" *ngIf="nombreExistente">Existen errores en el Formulario.</small>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+</div>
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalError"></button>
-    <div #modalError class="modal fade" id="modalError" tabindex="-1" role="dialog" aria-labelledby="modalErrorLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-                </div>
-                <div class="modal-body">
-                    <h5></h5>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+<div class="modal fade" id="modalError" tabindex="-1" role="dialog" aria-labelledby="modalErrorLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button #cerrarModalError type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+            </div>
+            <div class="modal-body text-center">
+                <h5 class="text-danger"> {{errorOrden}} </h5>
+                <h6>Desea liberar el espacio?</h6>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary mx-auto" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary mx-auto" (click)="liberarLugar()">Liberar</button>
             </div>
         </div>
     </div>
-
 </div>
